task2/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  service
spec:
  selector:
    app:  nginx
  type:  ClusterIP
  ports:
  - name:  nginx
    port:  8080
    targetPort:  80
